$Id: History,v 1.41 2002-02-14 10:48:44 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

14 feb 02: L.Urban (utils-V04-00-01)
- initial value of data member of G4VEnergyLoss finalRange
  has been changed
  (actual value of this data member is computed in
   G4VeEnergyLoss,G4VhEnergyLoss and G4VMuEnergyLoss..)

11 feb 02: mma (utils-V04-00-00)
- subSecFlag = false --> No sucutoff generation
    
08 nov 01: mma (utils-V03-02-11)
- G4VEnergyLoss: some data members and functions are no more static
     
07 nov 01: mma (utils-V03-02-10)
- bug fixe in G4MultipleScattering::PostStepDoIt()
     
29 oct 01: mma (utils-V03-02-09)
- static functions no more inlined
     
24 oct 01: mma (utils-V03-02-08)
- cut per material: G4VEnergyLoss
     
28 sep 01: mma (utils-V03-02-07)
- StorePhysicsTable: ParticleName included in FileName

27 sep 01: L.Urban (utils-V03-02-06)
-  bug fixed in G4EnergyLossTables.icc,.cc:
   this bug caused sometime negative energy deposit
   (it was a very-very old bug)
-  value of data member factlim in msc has been changed

19 sep 01: mma (utils-V03-02-05)
- come back to previous process name: "msc"
     
17 sep 01: mma (utils-V03-02-04)